<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialogLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:orientation="vertical">

    <!-- Campo para o título -->
    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title" />

    <!-- Campo para a descrição -->
    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description" />

    <!-- CheckBox para o estado de conclusão -->
    <CheckBox
        android:id="@+id/checkBoxIsCompleted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done" />

</LinearLayout>
