<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_task_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        app:cardElevation="4dp"
        app:cardCornerRadius="16dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/completed_task"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/completed_task"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginHorizontal="8dp"
                app:srcCompat="@drawable/ic_normal"
                app:tint="@color/black"
                />

            <TextView
                android:id="@+id/task_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/completed_task"
                app:layout_constraintEnd_toStartOf="@+id/edit_task"
                tools:text="Task title"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:maxLines="1"
                android:ellipsize="end"
                />

            <TextView
                android:id="@+id/task_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/task_name"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/completed_task"
                app:layout_constraintEnd_toStartOf="@+id/edit_task"
                tools:text="Task description"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:maxLines="1"
                android:ellipsize="end"
                />


            <androidx.cardview.widget.CardView
                android:id="@+id/edit_task"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:focusable="true"
                android:clickable="true"
                app:cardCornerRadius="22.5dp"
                app:cardElevation="4dp"
                app:layout_constraintEnd_toStartOf="@+id/delete_task"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:foreground="?attr/selectableItemBackground"
                android:layout_marginEnd="8dp">

                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/delete_task"
                    app:srcCompat="@drawable/ic_edit"
                    app:tint="@color/black"
                    android:background="@color/white"
                    android:focusable="false"
                    android:clickable="false"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/delete_task"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:focusable="true"
                android:clickable="true"
                app:cardCornerRadius="22.5dp"
                app:cardElevation="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:foreground="?attr/selectableItemBackground"
                android:layout_marginEnd="16dp">

                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/delete_task"
                    app:srcCompat="@drawable/ic_delete"
                    app:tint="@color/black"
                    android:background="@color/white"
                    android:focusable="false"
                    android:clickable="false"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/undo_task"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:visibility="gone"
                android:focusable="true"
                android:clickable="true"
                app:cardCornerRadius="22.5dp"
                app:cardElevation="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:foreground="?attr/selectableItemBackground"
                android:layout_marginEnd="16dp">

                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/undo_task"
                    app:srcCompat="@drawable/ic_undo"
                    app:tint="@color/black"
                    android:background="@color/white"
                    android:focusable="false"
                    android:clickable="false"/>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>